eks/aws-load-balancer-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - name: aws-load-balancer-controller
          image: amazon/aws-load-balancer-controller:v2.4.1
          args:
            - /controller
            - --cluster-name=$(CLUSTER_NAME)
            - --ingress-class=alb
            - --aws-vpc-id=$(VPC_ID)
          ports:
            - name: metrics
              containerPort: 8181
