eks/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: front
        image: 882981870627.dkr.ecr.ap-northeast-1.amazonaws.com/kubernetes_live-go-frontend:latest
        ports:
        - containerPort: 3000
