eks/back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: back
