eks/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: front
