eks/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    # ALBを使うためのアノテーション
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"  # ALBの場合はnlb-ip
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
